// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewReducer should handle specific defined types: defined type RESET_PAGE 1`] = `
{
  "result": {
    "filters": {},
    "query": {
      "test_id": {
        "page": 1,
      },
    },
    "update": {},
  },
  "type": "RESET_PAGE",
}
`;

exports[`viewReducer should handle specific defined types: defined type SET_FILTER 1`] = `
{
  "result": {
    "filters": {
      "test_id": {
        "currentFilterCategory": undefined,
      },
    },
    "query": {},
    "update": {},
  },
  "type": "SET_FILTER",
}
`;

exports[`viewReducer should handle specific defined types: defined type SET_QUERY 1`] = `
{
  "result": {
    "filters": {},
    "query": {
      "test_id": {
        "undefined": undefined,
      },
    },
    "update": {},
  },
  "type": "SET_QUERY",
}
`;

exports[`viewReducer should handle specific defined types: defined type UPDATE_VIEW 1`] = `
{
  "result": {
    "filters": {},
    "query": {},
    "update": {
      "test_id": 1654041600000,
    },
  },
  "type": "UPDATE_VIEW",
}
`;
